workspace = { members = ["my_project_macros"] }
[package]
name = "aoc_24"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.13.0"
once_cell = "1.20.2"
sortedlist-rs = "0.2.2"
my_project_macros = { path = "./my_project_macros" }
clearscreen = "3.0.0"
memoize = "0.4.2"
ndarray = "0.16.1"
ndarray-linalg = "0.16.0"
regex = "1.11.1"
nalgebra = "0.33.2"

